--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "root",
-  "private": true,
+  "name": "zh-cli-dev",
+  "version": "1.0.2",
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
     "lerna": "^6.4.1"
-  }
+  },
+  "main": "test.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/izhaong/zh-cli-dev.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/izhaong/zh-cli-dev/issues"
+  },
+  "homepage": "https://github.com/izhaong/zh-cli-dev#readme",
+  "description": ""
 }
