--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,5 +21,6 @@
   },
   "dependencies": {
     "@zh-cli-dev/utils": "^1.0.2"
-  }
+  },
+  "gitHead": "be69c6d4c182175c787a2076f938b6cc36c8af5a"
 }
