--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@zh-cli-dev/core",
+  "name": "@zh-dev-cli/core",
   "version": "1.0.5",
   "description": "> TODO: description",
   "author": "izhaong <izhaong@outlook.com>",
@@ -20,7 +20,7 @@
     "test": "node ./__tests__/core.test.js"
   },
   "dependencies": {
-    "@zh-cli-dev/utils": "^1.0.2"
+    "@zh-dev-cli/utils": "^1.0.2"
   },
   "gitHead": "c8146d65d02a3e376e08f1fb02e7bf030f64b401"
 }
