--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -14,6 +14,7 @@
     "lib"
   ],
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmmirror.com/"
   },
   "scripts": {
@@ -22,5 +23,5 @@
   "dependencies": {
     "@zh-dev-cli/utils": "^1.0.6"
   },
-  "gitHead": "c8146d65d02a3e376e08f1fb02e7bf030f64b401"
+  "gitHead": "c315134b6d068ef7a41e482f6af057097ffd6905"
 }
